# ecomm-hacks-starter

./: .gitignore  Makefile  README.md  draft_final-readme.txt  index.html  test_image_e2e.py  test_integration.py  test_parisian_atelier.py  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
.claude/: .mcp.json  CLAUDE.md  orchestra.md  settings.json
.claude/commands/: merge-child.md
backend/: .env.example  Makefile  README.md  download_base_scenes.py  generate_consumer_gallery.py  pyproject.toml  test_product_integration.py
backend/app/: __init__.py  config.py  main.py
backend/app/models/: __init__.py  canvas_config.py  chat.py  image.py  media.py
backend/app/routers/: chat.py  generate.py  image.py  media.py  onboard.py  style.py
backend/app/services/: __init__.py  gemini.py  session_store.py  xml_parser.py
backend/config/: defaults.json
backend/prompts/: image_generation.md  system.txt  test_user_context.txt
backend/scripts/: cleanup_products.py  download_arena_images.py  download_unsplash_aesthetics.py  download_unsplash_curated.py  download_wikimedia_images.py  rename_aesthetics.py  test_image_prompts.py
backend/tests/: conftest.py  test_chat.py  test_config.py  test_image.py  test_image_generation.py  test_images.py  test_multimedia.py  test_root.py  test_service_unavailable.py
presentation/: Ephemeral-Ads.pptx  slides-brutalist.html  slides-dark-editorial.html  slides-gradient-ethereal.html  slides-luxury-soft.html  slides.html
presentation/pptx-build/: build-direct.cjs  build.cjs  (+2 more)
scripts/: generate_prototype_assets.py  test_prototype.py
(+81 files in other folders)
